Parser integration (#11)
* Update pom.xml

- added shade-plugin dependency for executable javafx jar and dependency jars now stored in target/dist/lib upon maven package call.

* Add Launcher.java

- issues with executing jar with MainApp.java as main class, due to extends Application so this was a fix. It just calls MainApp.main()

* Update README.md

* Add mermaidJSTest.html

- add a test html file using mermaidJS to showcase class diagram creation and rendering 
- codepen live demo can be seen here: https://codepen.io/vikiru-2/pen/RwJGBBP

* Update README.md

* Create joernServer.java

- starts a joern server using process builder and does not popup the terminal (as intended, but assumes the user has installed joern as it needs the joern cli)

* Add a test project for analyzing

- add AddressBook and BuddyInfo which will be analyzed

* Create joernQuery.py

- executes simple joern queries and writes the output to files stored in src/main/python/joernFiles

* Add example joern output files

- example output files from analyzing AddressBook and BuddyInfo using joern and queries in joernQuery.py

* Update README.md

* Update README.md

* Update README.md

* Update joernQuery.py

- cleanup methods into one single method that execute queries and write to file and additionally clean the joern result

* Add cleaned up example files

* Added proper methods file

* Update joernQuery.py

- minor fix cause methods file was not being cleaned up

* Add methods with modifiers

- add a function to get access modifiers for methods and create a new text file

* Replace .txt with .json

- replace .txt with .json for ease of access for the paser in java

* Update joernQuery.py

- added function to clean jsonPretty result from joern so it can be a proper json file
- clean up getAndWriteJoernResults method to account for new jsonPretty format

* added modifiers to methods and cleaned up some bad code (#7)

* Add allFie